Add the first section of the page.

--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,88 @@
+*{
+  margin:0px;
+  padding:0px;
+}
+
+
 header{
-  height: 180;
+  height: 180px;
+  background-color: #2a2a2b;
+  color: white;
 }
 nav ul {
   list-style: none;
   display: grid;
-  grid-template-columns: repeat(6,1fr)
+  height:180px;
+  grid-template-columns: repeat(6,1fr);
 }
 nav ul li{
   justify-self: center;
   align-self: center;
+}
+
+
+
+ /* Section 1 Styles */
+
+
+#section-1{
+  display:grid;
+  grid-template-columns:1fr 1fr;
+  grid-template-rows: 812.41px;
+  position: relative;
+
+}
+
+#section1-header{
+  position: absolute;
+  height: 100px;
+  width:400px;
+  left:50%;
+  margin-left:-200px;
+  top:40px;
+  font-size: calc(26px + (30 - 26) * (100vw - 350px)/ (1300 - 350));
+  font-weight: bold;
+  font-family: Mija;
+  letter-spacing: -1px;
+  text-align: center;
+}
+
+#section1-header p{
+  display: inline-block;
+  background-color: white;
+  padding:5px;
+}
+.darkGray{
+  background-color: #26262e;
+}
+
+.lightGray{
+  background-color: #323245;
+}
+.lightGrayShade1{
+  background-color: #363642;
+}
+
+.lightGrayShade2{
+  background-color: #4e4e59;
+}
+
+.lightGrayShade3{
+  background-color: #555569;
+}
+
+.section1-part{
+  height:812.41px;
+}
+.section1-part-content{
+  width:60%;
+  margin:auto;
+  font-family: Elena;
+  font-size: 50px;
+  margin-top:300px;
+  color:white;
+}
+.section1-part-content span{
+  font-family: Elena;
+  font-size: 20px; 
 }
