--- a/css/style.css
+++ b/css/style.css
@@ -86,3 +86,40 @@ nav ul li{
   font-family: Elena;
   font-size: 20px; 
 }
+
+#section-2{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 519px 600px;
+  grid-template-areas: 
+  "header header header"
+  "item1 item2 item3";
+
+}
+#section-2 div{
+  padding:20px;
+  font-size: 20px;
+ 
+}
+#section-2 div h1{
+  text-decoration: underline;
+  margin-top: 50px;
+}
+#section-2 div:nth-child(1){
+  grid-area: header;
+  background-color: red;
+}
+#section-2 div:nth-child(2){
+  grid-area: item1;
+  background-color: blue;
+}
+#section-2 div:nth-child(3){
+  grid-area: item2;
+  background-color: yellow;
+  
+}
+#section-2 div:nth-child(4){
+  grid-area: item3;
+  background-color: green;
+
+}
