--- a/css/style.css
+++ b/css/style.css
@@ -149,3 +149,62 @@ nav ul li{
   margin: auto;
   margin-top:50px;
 }
+
+
+/* Section 4 Styles */
+
+
+.articles-link-header{
+  height:183.88px;
+  text-align: center;
+}
+
+.articles-link-header p{
+  margin-top:70px;
+  display: inline-block;
+  border-bottom: 5px solid #d33a2c;
+  text-transform: uppercase;
+  font-size: 15px;
+  letter-spacing: 2px;
+    font-weight: 100;
+    font-family: 'Spinnaker', sans-serif;
+}
+
+
+#coming-event{
+  height: 1039px;
+  background-color: #555569;
+}
+
+#person-of-week{
+  height:346px;
+  background-color: #2a2a2b;
+}
+
+#section-4{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows:repeat(3,414px) ;
+}
+
+
+.section4-part{
+  color:white;
+
+}
+
+.section4-part div{
+  width:80%;
+  margin-left:20%;
+  margin-top:120px;
+}
+.section4-part div h1{
+  font-size: 34px;
+  font-family: Mija;
+}
+
+.section4-part div p{
+  font-size: 20.0px;
+  font-family: Mija;
+  margin-top:20px;
+}
