Add textual content to section 5

--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,7 @@ nav ul li{
 .article-link{
   padding:20px;
   font-size: 20px;
+  color:white;
 }
 .article-link h1{
   text-decoration: underline;
