--- a/css/style.css
+++ b/css/style.css
@@ -238,3 +238,68 @@ nav ul li{
 #section-5 div:nth-child(6){
   grid-area: item6;
 }
+
+
+
+#news-letter{
+  width:90%;
+  margin:auto;
+  height:1116px;
+  border-radius: 5px;
+  background-color: #4e4e59;
+  margin-top:40px;
+  margin-bottom: 70px;
+}
+
+
+#footer{
+  text-align: center;
+  height:733px;
+  background-color: #363642;
+  padding-top:80px;
+}
+
+#footer p{
+  font-size: .9em;
+  line-height: calc(1.3em + (1.5 - 1.3) * ((100vw - 21em)/ (35 - 21)));
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color:white;
+ 
+}
+
+
+#footer ul{
+    margin:100px auto 0 auto;
+ 
+   
+    font-size: calc(1.3em + .2vw);
+    line-height: calc(1.5em + .2vw);
+    word-break: break-word;
+    width:80%;
+    
+    
+
+}
+
+#footer ul li::before{
+  
+  content: "• ";
+  
+  
+ 
+}
+
+
+#footer ul li a{
+  text-decoration: none;
+  color: white;
+}
+
+#footer ul li{
+  
+  display: inline-block;
+  color:white;
+  padding:10px;
+ 
+}
