Update the colors

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@
 
 header{
   height: 180px;
-  background-color: #2a2a2b;
   color: white;
 }
 nav ul {
@@ -53,23 +52,33 @@ nav ul li{
   padding:5px;
 }
 .darkGray{
-  background-color: #26262e;
+  background-color: #242424;
 }
+.darkGray1{
+  background-color: #222222;
+}
+.darkGray2{
+  background-color: #202020;
+}
+.darkGray3{
+  background-color: #1e1e1e;
+}
+
 
 .lightGray{
-  background-color: #323245;
+  background-color: #808080;
 }
-.lightGrayShade1{
-  background-color: #363642;
+.lightGray1{
+  background-color: #8f8f8f;
+}
+.lightGray2{
+  background-color: #919191;
+}
+.lightGray3{
+  background-color: #939393;
 }
 
-.lightGrayShade2{
-  background-color: #4e4e59;
-}
 
-.lightGrayShade3{
-  background-color: #555569;
-}
 
 .section1-part{
   height:812.41px;
@@ -77,7 +86,7 @@ nav ul li{
 .section1-part-content{
   width:60%;
   margin:auto;
-  font-family: Elena;
+  font-family: Spinnaker;
   font-size: 50px;
   margin-top:300px;
   color:white;
@@ -90,9 +99,8 @@ nav ul li{
 #section-2{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 519px 600px;
+  grid-template-rows: 600px;
   grid-template-areas: 
-  "header header header"
   "item1 item2 item3";
 }
 .article-link{
@@ -101,19 +109,18 @@ nav ul li{
   color:white;
 }
 .article-link h1{
+  font-family: Karla, sans-serif;
   text-decoration: underline;
   margin-top: 50px;
 }
+
 #section-2 div:nth-child(1){
-  grid-area: header;
-}
-#section-2 div:nth-child(2){
   grid-area: item1;
 }
-#section-2 div:nth-child(3){
+#section-2 div:nth-child(2){
   grid-area: item2;  
 }
-#section-2 div:nth-child(4){
+#section-2 div:nth-child(3){
   grid-area: item3;
 }
 #section-3{
@@ -146,9 +153,9 @@ nav ul li{
 #friend-website{
   height:277px;
   width:247px;
-  background-color: white;
   margin: auto;
   margin-top:50px;
+  color:white;
 }
 
 
@@ -174,12 +181,10 @@ nav ul li{
 
 #coming-event{
   height: 1039px;
-  background-color: #555569;
 }
 
 #person-of-week{
   height:346px;
-  background-color: #2a2a2b;
 }
 
 #section-4{
@@ -240,22 +245,9 @@ nav ul li{
 }
 
 
-
-#news-letter{
-  width:90%;
-  margin:auto;
-  height:1116px;
-  border-radius: 5px;
-  background-color: #4e4e59;
-  margin-top:40px;
-  margin-bottom: 70px;
-}
-
-
 #footer{
   text-align: center;
   height:733px;
-  background-color: #363642;
   padding-top:80px;
 }
 
