--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ nav ul li {
 }
 
 .darkGray1 {
-  background-color: #222222;
+  background-color: #222;
 }
 
 .darkGray2 {
@@ -61,14 +61,14 @@ nav ul li {
 .section1-part-content {
   width: 60%;
   margin: auto;
-  font-family: Spinnaker;
+  font-family: Spinnaker, sans-serif;
   font-size: 50px;
   margin-top: 300px;
   color: white;
 }
 
 .section1-part-content span {
-  font-family: Elena;
+  font-family: Karla, sans-serif;
   font-size: 20px;
 }
 
@@ -209,8 +209,8 @@ nav ul li {
 }
 
 #footer p {
-  font-size: .9em;
-  line-height: calc(1.3em + (1.5 - 1.3) * ((100vw - 21em)/ (35 - 21)));
+  font-size: 0.9em;
+  line-height: calc(1.3em + (1.5 - 1.3) * ((100vw - 21em) / (35 - 21)));
   text-transform: uppercase;
   letter-spacing: 1px;
   color: white;
