--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,16 @@ nav ul li {
 }
 
 /* Section 1 Styles */
-
+.profile{
+  height: 75px;
+  width: 75px;
+  border: 5px solid white;
+  border-radius: 5px;
+}
+#section-4 .profile{
+  position: absolute;
+  left: 20px;
+}
 .darkGray {
   background-color: #242424;
 }
@@ -104,8 +113,15 @@ nav ul li {
 
 .section4-part {
   color: white;
+  position: relative;
 }
 
+.cat{
+  display: block;
+  width: 256px;
+  height: 288px;
+  margin:auto;
+}
 .section4-part div {
   width: 80%;
   margin-left: 20%;
@@ -156,9 +172,16 @@ nav ul li {
   grid-template-rows: 600px;
   grid-template-areas: "item1 item2 item3";
 }
+#person-of-week .profile{
+  width: 286px;
+  height: 286px;
+  float: left;
+  margin-right:  50px;
+}
 
 #coming-event {
   height: 1039px;
+  text-align: center;
 }
 
 #person-of-week {
@@ -182,6 +205,10 @@ nav ul li {
   grid-area: item1;
 }
 
+#section-5 div:nth-child(1) img {
+  float:right;
+}
+
 #section-5 div:nth-child(2) {
   grid-area: item2;
 }
@@ -200,6 +227,7 @@ nav ul li {
 
 #section-5 div:nth-child(6) {
   grid-area: item6;
+  text-align: center;
 }
 
 #footer {
