--- a/css/style.css
+++ b/css/style.css
@@ -333,19 +333,14 @@ nav ul li button {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 600px;
-    grid-template-areas: 
-    "item1 item2 "
-    "item3 .";
+    grid-template-areas: "item1 item2 " "item3 .";
     background-color: #8f8f8f;
   }
   #section-3 {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 650px 570px;
-    grid-template-areas: "item1 ." 
-    "item2 item2" 
-    "item3 item4" 
-    "item5 .";
+    grid-template-areas: "item1 ." "item2 item2" "item3 item4" "item5 .";
     background-color: #8f8f8f;
   }
   #section-4 {
@@ -357,14 +352,8 @@ nav ul li button {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: auto;
-    grid-template-areas: 
-    "item1 item1" 
-    "item2 item3" 
-    "item4 item5" 
-    "item6 item6";
+    grid-template-areas: "item1 item1" "item2 item3" "item4 item5" "item6 item6";
   }
-      
-  
 }
 
 @media screen and (max-width: 700px) {
@@ -378,38 +367,21 @@ nav ul li button {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 600px;
-    grid-template-areas: 
-    "item1"
-    "item2"
-    "item3";
+    grid-template-areas: "item1" "item2" "item3";
   }
-
   #section-3 {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 650px 570px;
-    grid-template-areas: 
-    "item1" 
-    "item2" 
-    "item3" 
-    "item4" 
-    "item5";
+    grid-template-areas: "item1" "item2" "item3" "item4" "item5";
     background-color: #8f8f8f;
-  }  
+  }
   #section-4 .profile {
-    top:10px;
+    top: 10px;
   }
   #section-5 {
     display: grid;
-    grid-template-columns:  1fr;
-    grid-template-areas: 
-    "item1" 
-    "item2" 
-    "item3" 
-    "item4" 
-    "item5" 
-    "item6";
+    grid-template-columns: 1fr;
+    grid-template-areas: "item1" "item2" "item3" "item4" "item5" "item6";
   }
-
 }
-
